modified value names

--- a/index.html
+++ b/index.html
@@ -1,24 +1,33 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/html">
-  <head>
-    <meta charset="UTF-8">
-    <title>My First CRUD App</title>
-    <link rel="stylesheet" href="app.css">
-    <script
-            src="https://code.jquery.com/jquery-3.3.1.js"
-            integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-            crossorigin="anonymous"></script>
-    <script src="app.js"></script>
 
-  </head>
-  <body>
+<head>
+  <meta charset="UTF-8">
+  <title>My First CRUD App</title>
+  <link rel="stylesheet" href="app.css">
+   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.21/c3.css">
+  <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.21/c3.js
+"></script>
+  <script src="app.js"></script>
+</head>
 
-  <input type="text" class="user-input-title" placeholder="Enter the Title">
-  <textarea class="user-input-body" placeholder="Enter the body of text"></textarea>
-
+<body>
+  <div class="recipe-box">
+    <div class="ingredients">
+      <div id="chart"></div>
+  <script src="chart.js"></script>
+  <script src="data.js"></script>
+    </div>
+    <div class="directions"></div>
+    <div class="recipe-photo"></div>
+  </div>
+  <input type="string" class="ingredient" placeholder="Enter ingredient">
+  <input type='number' class=".cups" placeholder="Enter cups">
   <button class="add-text-btn">add text</button>
   <button class="del-text-btn">delete text</button>
-
   <div class="display"></div>
-  </body>
+</body>
+
 </html>
