--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>My Sad CRUD App</title>
+  <title>My CRUD Recipe Ideas App</title>
   <link rel="stylesheet" href="app.css">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.21/c3.css">
+  <link href="https://fonts.googleapis.com/css?family=Homemade+Apple|Lato:400,900" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.js"></script>
@@ -15,21 +16,20 @@
 </head>
 
 <body>
-
-  
     <div class="to-do">
-      <h3>Sad To Do List</h3>
+      <h3>My Recipe Ideas</h3>
         
-          <form>
-      <input type="string" id="tasks" placeholder="Enter a sad task">
-      <input type="string" id="deleteTasks" placeholder="Delete a sad task">
+ <form>
+<!--        <input type="checkbox">          -->
+        <input type="string" id="tasks" placeholder="Enter a recipe name">
+<!--      <input type="string" id="deleteTasks" placeholder="Delete a sad task">-->
         </form>
-      <button class="add-task-btn" >add text</button>
-      <button class="del-task-btn">delete text</button>
+      <button class="add-task-btn" >add recipe</button>
+      <button class="del-task-btn">clear recipes</button>
 <!--      <div class="display"></div>-->
         
       <div id="to-do-box">
-        <ul id="ordered-steps"></ul>
+        <ul id="to-do-tasks"></ul>
       </div>
     </div>
 <!--    <div type   string" class="testbox"></div>-->
@@ -39,3 +39,12 @@
 </html>
 
 <!-- data-storage-key="Stephanie" -->
+
+
+
+
+<!--
+Chicken pot pie
+Coconut Shrimp Curry
+Pasta Primavera
+Bacon and an Egg-->
